--- a/index.html
+++ b/index.html
@@ -283,6 +283,30 @@
                         views: "18K"
                     }
                 ]
+            },
+            {
+                title: "Chapter : ISOMERISM",
+                thumbnail: "https://edtech.b-cdn.net/images%20(3).jpeg",
+                tutor: "Dilshad Alam",
+                lecturesCount: 2,
+                lectures: [
+                    {
+                        title: "Lecture 01 : ISOMERISM",
+                        url: "https://edtech.b-cdn.net/ISOMERISM/L01_-_ISOMERISM.mp4",
+                        duration: "01:11:22",
+                        thumbnail: "https://edtech.b-cdn.net/images%20(3).jpeg",
+                        author: "Dilshad Alam",
+                        views: "5K"
+                    },
+                    {
+                        title: "Lecture 02 : ISOMERISM",
+                        url: "https://edtech.b-cdn.net/ISOMERISM/L02_-_ISOMERISM.mp4",
+                        duration: "01:09:47",
+                        thumbnail: "https://edtech.b-cdn.net/images%20(3).jpeg",
+                        author: "Dilshad Alam",
+                        views: "3.5K"
+                    }
+                ]
             }
         ];
 
