--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
                 
                 const header = document.createElement('div');
                 header.className = 'course-header';
-                header.textContent = 'Select Subject';
+                header.textContent = 'SEE 2082';
                 chatContainer.appendChild(header);
                 
                 const loading = document.createElement('div');
