--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                 <input 
                     type="text" 
                     id="video-code-input"
-                    placeholder="Enter video code (e.g., #56788)..."
+                    placeholder="Enter the question code..."
                     class="flex-1 px-3 py-2 text-sm border border-gray-300 dark:border-gray-600 rounded-md bg-gray-100 dark:bg-gray-700 text-gray-900 dark:text-white placeholder-gray-500 dark:placeholder-gray-400 focus:outline-none focus:ring-1 focus:ring-blue-500 dark:focus:ring-blue-400"
                     autocomplete="off"
                 >
