--- a/index.html
+++ b/index.html
@@ -1225,7 +1225,7 @@
                 
                 const header = document.createElement('div');
                 header.className = 'course-header';
-                header.textContent = 'SEE 2082';
+                header.textContent = " SEE 2082 Champion Batch ";
                 chatContainer.appendChild(header);
                 
                 const loading = document.createElement('div');
