--- a/index.html
+++ b/index.html
@@ -1080,7 +1080,7 @@
                 
                 const header = document.createElement('div');
                 header.className = 'challenge-header';
-                header.textContent = 'Select Exam Type';
+                header.textContent = 'Model Exam Sets';
                 chatContainer.appendChild(header);
                 
                 const loading = document.createElement('div');
