--- a/index.html
+++ b/index.html
@@ -654,7 +654,7 @@
             font-weight: 600;
             color: #374151;
             padding: 12px 0;
-            margin-bottom: 16px; /* DOUBLED: Increased to 16px for double margin */
+            margin-bottom: 8px; /* Halfed: Decreased to 8px to half margin */
             border-bottom: 1px solid #e5e7eb;
             background: #f9fafb;
         }
