--- a/index.html
+++ b/index.html
@@ -2285,7 +2285,7 @@
                 const modalHtml = `
                     <div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center p-4 z-50">
                         <div class="bg-white dark:bg-gray-800 rounded-lg shadow-xl p-6 max-w-sm w-full max-h-96 overflow-y-auto">
-                            <h3 class="text-lg font-medium text-gray-900 dark:text-white mb-4">Select Course</h3>
+                            <h3 class="text-lg font-medium text-white-900 dark:text-white mb-4">Select Course</h3>
                             <div class="space-y-2">
                                 ${window.coursesList.map(course => `
                                     <button 
