--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@
         
         .subject-card-title {
             font-weight: 700;
-            color: white;
+            color: #6b7280;
             margin-bottom: 0.5rem;
             font-size: 1.125rem;
         }
@@ -834,8 +834,8 @@
         
         /* Full width images for Notes and Practice pages */
         .content-full-image {
-            width: 100% !important;
-            height: auto !important;
+            width: 100%;
+            height: auto;
             display: block;
             border-radius: 0;
             margin: 0;
