--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         
         /* Brand font colors - Dark mode: White and Orange */
         .dark .concept-text {
-            color: #ffffff; /* White for dark mode */
+            color: white; /* White for dark mode */
             text-shadow: 1px 1px 2px rgba(255, 255, 255, 0.1);
         }
         
@@ -192,7 +192,7 @@
         /* Video overlay for touch protection - 30% from left */
         .video-overlay {
             position: absolute;
-            left: 0;
+            left: 100%;
             width: 30%; /* Covers 30% from left */
             top: 0;
             bottom: 0;
@@ -332,7 +332,7 @@
         .lecture-order {
             background: #3b82f6;
             color: white;
-            width: 32px;
+            width: 100%;
             height: 32px;
             border-radius: 0; /* SQUARE CORNERS */
             display: flex;
@@ -349,7 +349,7 @@
 
         .lecture-title {
             font-weight: 600;
-            color: #1f2937;
+            color: #f3f4f6;
             margin-bottom: 0.25rem;
         }
 
