--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@
         /* Video overlay for touch protection - 30% from left */
         .video-overlay {
             position: absolute;
-            left: 0;
+            left: 20%;
             width: 30%; /* Covers 30% from left */
-            top: 0;
-            bottom: 0;
+            top: 20%;
+            bottom: 20%;
             background: transparent;
             z-index: 5;
             pointer-events: none; /* Allows clicks to pass through */
