--- a/exam3.html
+++ b/exam3.html
@@ -553,7 +553,7 @@
             width: 100%;
             padding: 1.5rem 1rem;
             border-bottom: 1px solid #e5e7eb;
-            background: #cff2ff; /* Specific light blue background */
+            background: #ffffff; /* Specific light blue background */
             margin: 0;
         }
         
@@ -589,7 +589,7 @@
             line-height: 1.5;
             text-align: left;
             width: 100%;
-            background: #cff2ff; /* Same as container */
+            background: #ffffff; /* Same as container */
             padding: 0;
             white-space: pre-wrap; /* Preserve line breaks */
             word-wrap: break-word; /* Break long words */
