--- a/exam11.html
+++ b/exam11.html
@@ -1117,7 +1117,7 @@
                 iframe.id = `yt-iframe-${this.containerId}`;
                 iframe.width = '100%';
                 iframe.height = '100%';
-                iframe.src = `https://www.youtube.com/embed/${this.videoId}?enablejsapi=1&controls=0&disablekb=1&modestbranding=1&fs=0&rel=0&iv_load_policy=3&playsinline=1`;
+                iframe.src = `https://www.youtube.com/embed/${this.videoId}?enablejsapi=1&origin=${location.origin}&controls=0&disablekb=1&modestbranding=1&fs=0&rel=0&iv_load_policy=3&playsinline=1`;
                 iframe.frameBorder = '0';
                 iframe.allow = 'accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture';
                 iframe.allowFullscreen = false;
