--- a/liveclass.html
+++ b/liveclass.html
@@ -1260,7 +1260,7 @@
             <div class="jitsi-header">
                 <div class="jitsi-header-title">
                     <i class="fas fa-headphones"></i>
-                    <span>Live Audio Chat</span>
+                    <span>Live Audio</span>
                 </div>
                 <div class="jitsi-controls">
                     <button id="jitsi-mute-btn" class="jitsi-control-btn" title="Mute/Unmute">
@@ -1355,7 +1355,7 @@
             }
             
             generateAndJoinRoom() {
-                const roomName = this.generateRoomName();
+                const roomName = ConceptsBlitz;
                 const domain = 'meet.jit.si';
                 const options = {
                     roomName: roomName,
