--- a/liveclass.html
+++ b/liveclass.html
@@ -1260,7 +1260,7 @@
             <div class="jitsi-header">
                 <div class="jitsi-header-title">
                     <i class="fas fa-headphones"></i>
-                    <span>Live Audio</span>
+                    <span>Live Audio Chat</span>
                 </div>
                 <div class="jitsi-controls">
                     <button id="jitsi-mute-btn" class="jitsi-control-btn" title="Mute/Unmute">
