--- a/liveclass3.html
+++ b/liveclass3.html
@@ -1355,7 +1355,7 @@
             }
             
             generateAndJoinRoom() {
-                const roomName = this.generateRoomName();
+                const roomName = ConceptsBlitz;
                 const domain = 'meet.jit.si';
                 const options = {
                     roomName: roomName,
